openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparklight-raffle
  labels:
    app: sparklight-raffle
    app.kubernetes.io/name: sparklight-raffle
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sparklight-raffle
