openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sparklight-raffle
  labels:
    app: sparklight-raffle
    app.kubernetes.io/name: sparklight-raffle
spec:
  to:
    kind: Service
    name: sparklight-raffle
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
